<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="mapbox_access_token">pk.eyJ1IjoidGFsbHk5NSIsImEiOiJjazIyb3d4MXgwb2F2M2RxY2lyMmRzYXhlIn0.n2nl0WTN8Kg1FcaNbY4YjQ</string>
    <string name="app_name">UbicateX</string>
    <string name="app_name2">Locales</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_salir">Cerrar sesion</string>
    <string name="action_inicio">Iniciar sesion</string>
    <string name="action_main">Principal</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_registro">Registrarse</string>
    <string name="menu_inicio">Iniciar sesion</string>
    <string name="menu_comercios">Locales</string>
    <string name="menu_formularios">Agregar nuevas localizaciones</string>
    <string name="campo_nombre">nombre</string>
    <string name="campo_codigo">codigo</string>
    <string name="menu_sodas">Sodas</string>
    <string name="menu_pulperias">Pulperias</string>
    <string name="menu_llanteras">Llanteras</string>


    <string name="menu_paradas">Paradas de bus</string>
    <string name="menu_turismo">Centros turísticos</string>
    <string name="menu_solicitudes">Solicitudes de ubicación</string>
    <string name="menu_formulario">Agregar marcadores</string>
    <string name="menu_pulperia">Agregar pulperias</string>
    <string name="action_settings">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registrarse">UbicateX</string>
</resources>
