<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <!--item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/iniciosesion"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/user"
            android:title="@string/menu_registro" /-->

    </group>

    <item android:title="Cotegorias">
        <menu>
            <item
                android:id="@+id/nav_comercio"
                android:icon="@drawable/tienda"
                android:title="@string/menu_comercios" />
            <item
                android:id="@+id/nav_turismo"
                android:icon="@drawable/turimo4"
                android:title="@string/menu_turismo" />

            <item
                android:id="@+id/nav_parada"
                android:icon="@drawable/bus"
                android:title="@string/menu_paradas" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_solicitud"
        android:icon="@drawable/soli8"
        android:title="@string/menu_solicitudes" />


</menu>
